<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment"
    android:background="@drawable/fondo">
    <!-- CardView del logo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvImagen"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/imagenPacientum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/pacientum"/>
        </androidx.cardview.widget.CardView>

        <!-- CardView del formulario-->
        <androidx.cardview.widget.CardView
            android:layout_margin="2dp"
            android:id="@+id/cvFormulario"
            android:layout_width="650dp"
            android:layout_height="350dp"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            app:cardCornerRadius="35dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_toolbar"
                android:orientation="vertical"
                android:padding="20dp"
                android:gravity="center_horizontal"
                >
                <!-- Numero de enfermero-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilnEnfermero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nEnfermero"
                    android:textColorHint="@color/white"
                    android:paddingTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietnEnfermero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/fondo_global"
                        android:textColor="@color/white"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!-- Contraseña-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contraseña"
                    android:textColorHint="@color/white"
                    android:paddingTop="20dp"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/fondo_global"
                        android:textColor="@color/white"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <!-- Boton de conectar-->
                <Button
                    android:id="@+id/btnConectar"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/conectar"
                    android:textColor="@color/black"
                    >
                </Button>
                <!-- Olvidar contraseña-->
                <TextView
                    android:id="@+id/tvOlvidar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/olvidar"
                    android:textColor="@color/white"
                    android:layout_gravity="start"

                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</FrameLayout>